--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask==1.1.4
 flask-marshmallow==0.14.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+gunicorn==20.1.0
 idna==3.3
 inflection==0.5.1
 isodate==0.6.0
